Fix grammar/spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ img {
 
 header.logo h1 {
     font-family: 'Monoton';
-    font-size: 4em;
+    font-size: 5em;
     font-weight: lighter;
     border-bottom: 1px solid #ccc;
     margin-top: 0;
@@ -368,7 +368,7 @@ a.tblogo:active {
     font-weight: 300;
     text-align: justify;
     font-size: 1.1em;
-    line-height: 1.5em;
+    line-height: 1.7em;
     margin-top: 4em;
 }
 
